Jeu_de_tests/error/redefinition_parametre_parametre.tpc
/* parametre - parametre */

int main(int a, int a){
    return 0;
}
